mastodon/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
  namespace: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      serviceAccountName: mastodon-migration-checker
      containers:
        - name: sidekiq
          image: ghcr.io/mastodon/mastodon
          args:
            - bundle
            - exec
            - sidekiq
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "ps aux | grep '[s]idekiq' || exit 1"
          volumeMounts:
            - mountPath: /mastodon/public/system
              name: mastodon-main
      restartPolicy: Always
      volumes:
        - name: mastodon-main
          persistentVolumeClaim:
            claimName: mastodon-main
