mastodon/streaming-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming
  namespace: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      serviceAccountName: mastodon-migration-checker
      containers:
        - args:
            - node
            - ./streaming/index.js
          image: ghcr.io/mastodon/mastodon-streaming
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "curl -s --noproxy localhost localhost:4000/api/v1/streaming/health | grep -q 'OK' || exit 1"
          name: streaming
          ports:
            - containerPort: 4000
              protocol: TCP
      restartPolicy: Always
