mastodon/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: mastodon-migration-checker
      containers:
        - name: web
          image: ghcr.io/mastodon/mastodon
          command:
            - /bin/bash
            - -c
          args:
            - |
              # Start the web server directly without running migrations
              echo "Starting web server..."
              exec bundle exec puma -C config/puma.rb
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - curl -s --noproxy localhost localhost:3000/health | grep -q 'OK' || exit 1
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /mastodon/public/system
              name: mastodon-main
      restartPolicy: Always
      volumes:
        - name: mastodon-main
          persistentVolumeClaim:
            claimName: mastodon-main
