mastodon/streaming-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming
  namespace: mastodon
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
