mastodon/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: mastodon
spec:
  selector:
    app: web
  ports:
    - name: main-http
      port: 3000
      targetPort: 3000
